--- a/src/css/styel.css
+++ b/src/css/styel.css
@@ -6,7 +6,6 @@ body{
     margin: 3% 0 0 9%;
     display: flex;
     align-items: center;
-    /* width: 100px; */
 }
 .logo h1 {
     font-size: 25px;
@@ -53,14 +52,14 @@ body{
 .mensagem:focus {
     outline: 0;
 }
-.infomacao {
+.informacao {
     display: flex;
     margin: 10px 0 20px 50px;
     align-items: center;
     font-size: 15px;
     color: #495057;
 }
-.infomacao img {
+.informacao img {
     margin-right: 10px;
     width: 15px;
 }
