--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -1,3 +1,18 @@
+@media screen and (max-width: 1200px) {
+    .main {
+        display: block;
+    }
+    .mensagem { 
+        margin-top: 140px;
+        width: 100%;
+        height: 500px;
+    }
+    .texto-saida {
+        position: relative;
+        width: 100%;
+        margin-left: 0px;
+    }
+}
 @media screen and (max-width: 768px) {
     .main {
         display: inline-block;
@@ -9,9 +24,6 @@
         text-align: center;
     }
     .mensagem {
-        width: 90%;
-        height: 400px;
-        bottom: -15px;
         border: none;
         resize: none;
         border-radius: 15px;
@@ -27,12 +39,6 @@
         width: 200px;
         height: 48px;
         font-size: 14px;
-    }
-    .texto-saida {
-        position: relative;
-        bottom: 80px;
-        width: 100%;
-        margin-left: 0px;
     }
     .redes-sociais i {
         margin: 15px 30px;
