--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -7,10 +7,18 @@
         width: 100%;
         height: 500px;
     }
+    .informacao {
+        display: flex;
+        justify-content: center;
+        margin-right: 35%;
+        font-size: 15px;
+    }
     .texto-saida {
-        position: relative;
+        position: absolute;
+        bottom: -350px;
+        margin-left: -25px;
         width: 100%;
-        margin-left: 0px;
+        text-align: center;
     }
 }
 @media screen and (max-width: 768px) {
@@ -42,6 +50,9 @@
     }
     .redes-sociais i {
         margin: 15px 30px;
+    }
+    .footer span {
+        font-size: 12px;
     }
 }
 
@@ -107,7 +118,6 @@
     }
     .footer span {
         display: block;
-        font-size: 10px;
         margin-bottom: 5px;
     }
     .redes-sociais {
