--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -15,7 +15,7 @@
     }
     .texto-saida {
         position: absolute;
-        bottom: -350px;
+        bottom: -270px;
         margin-left: -25px;
         width: 100%;
         text-align: center;
@@ -30,6 +30,9 @@
     }
     .msg-saida {
         text-align: center;
+    }
+    .informacao {
+        margin: 10px 17% 20px 0%;
     }
     .mensagem {
         border: none;
@@ -48,6 +51,9 @@
         height: 48px;
         font-size: 14px;
     }
+    .texto-saida {
+        bottom: -200px;
+    }
     .redes-sociais i {
         margin: 15px 30px;
     }
@@ -56,17 +62,16 @@
     }
 }
 
-@media screen and (max-width: 525px){
+@media screen and (max-width: 600px){
     body {
         text-align: center;
     }
     .main {
         display: block;
     }
-    
     .informacao {
-        font-size: 9px;
-        margin: 10px 0 20px 120px;
+        margin: 10px 0 20px 5%;
+        font-size: 10px;
     }
     .logo a h1 {
         font-size: 9px;
@@ -95,6 +100,9 @@
         width: 100%;
         text-align: center;
     }
+    .texto-saida {
+        bottom: -100px;
+    }
     .texto-saida h3 {
         font-size: 14px;
         width: 100%;
@@ -114,7 +122,8 @@
     }
     .footer {
         flex-direction: column;
-        margin-top: 0px;
+        margin-top: -110px;
+        margin-left: 0px;
     }
     .footer span {
         display: block;
