--- a/src/css/styel.css
+++ b/src/css/styel.css
@@ -90,9 +90,9 @@ body{
 }
 .footer {
     display: flex;
-    justify-content: center;
+    margin-left: 8%;
     align-items: center;
-    margin-top: 50px;
+    margin-top: -100px;
 }
 .footer  span{
     display: inline-block;
